2011-03-08  Xiaomei Ji  <xji@chromium.org>

Reviewed by David Hyatt.

        Fix Regression: Content not drawn when scrolling horizontally in an RTL page.
        https://bugs.webkit.org/show_bug.cgi?id=55077.

        * fast/dom/scroll-reveal-left-overflow.html: Added.
        * fast/dom/scroll-reveal-top-overflow.html: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-left-overflow-expected.txt: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.checksum: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.png: Added.
        * platform/mac/fast/dom/scroll-reveal-top-overflow-expected.txt: Added.
2011-03-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Fix Regression: Content not drawn when scrolling horizontally in an RTL page.
        https://bugs.webkit.org/show_bug.cgi?id=55077.

        Inside ScrollView::calculateOverhangAreasForPainting(), when scroll position
        is negative, should include the position value into overhang rectangle's
        starting position.

        Tests: fast/dom/scroll-reveal-left-overflow.html
               fast/dom/scroll-reveal-top-overflow.html

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::calculateOverhangAreasForPainting):


Canonical link: https://commits.webkit.org/70513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80622 268f45cc-cd09-0410-ab3c-d52691b4dbfc